Fixed the header z-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11224,7 +11224,7 @@ body {
   color: white;
   width: 100%;
   padding: 20px;
-  z-index: 100000000;
+  z-index: 100;
 }
 
 .video-image-container {
